--- a/RestaurantManagementApp/RestaurantManagementApp.csproj
+++ b/RestaurantManagementApp/RestaurantManagementApp.csproj
@@ -184,13 +184,8 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="Statistikat.resx">
       <DependentUpon>Statistikat.cs</DependentUpon>
     </EmbeddedResource>
@@ -231,7 +226,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\2750635_gray-circle-login-user-icon-png-transparent-png.jpg" />
+    <None Include="Resources\search.png" />
+    <None Include="Resources\serving-dish.png" />
+    <None Include="Resources\lock.png" />
+    <None Include="Resources\Daco_717473.png" />
+    <None Include="Resources\delete%281%29.png" />
     <Content Include="Resources\New Project%283%29.png" />
+    <None Include="Resources\pexels-quang-nguyen-vinh-2159065.jpg" />
+    <None Include="Resources\padlock.png" />
     <Content Include="Resources\png-clipart-android-computer-icons-android-system-logo-handheld-devices.png" />
     <Content Include="Resources\pngegg.png" />
   </ItemGroup>
