--- a/RMS.BLL/RMS.BLL.csproj
+++ b/RMS.BLL/RMS.BLL.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PerdoruesitBLL.cs" />
+    <Compile Include="PorosiaBLL.cs" />
     <Compile Include="ProduktetBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatistikatBLL.cs" />
