--- a/RMS.DAL/RMS.DAL.csproj
+++ b/RMS.DAL/RMS.DAL.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="DatabaseConn.cs" />
     <Compile Include="PerdoruesitDAL.cs" />
+    <Compile Include="PorosiaDAL.cs" />
     <Compile Include="ProduktetDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatistikatDAL.cs" />
