--- a/RestaurantManagementApp/App.config
+++ b/RestaurantManagementApp/App.config
@@ -8,7 +8,7 @@
          />
            <add
       name="connStrRrezon"
-      connectionString="Data Source=DESKTOP-HP5K2C6\SQLEXPRESS;Initial Catalog=MenaxhimiRestorantit;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+      connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MenaxhimiRestorantit;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
       providerName="System.Data.SqlClient"
          />
   </connectionStrings>
