--- a/RestaurantManagementApp/App.config
+++ b/RestaurantManagementApp/App.config
@@ -1,17 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <connectionStrings>
-    <add
-      name="connStrFatlum"
-      connectionString="Data Source=DESKTOP-8L70NU2\FATLUMB;Initial Catalog=MenaxhimiIRestaurantit;Integrated Security=True"
-      providerName="System.Data.SqlClient"
+	<connectionStrings>
+		<add
+		  name="connStrFatlum"
+		  connectionString="Data Source=DESKTOP-8L70NU2\FATLUMB;Initial Catalog=MenaxhimiIRestaurantit;Integrated Security=True"
+		  providerName="System.Data.SqlClient"
          />
-           <add
-      name="connStrRrezon"
-      connectionString="Data Source=DESKTOP-HP5K2C6\SQLEXPRESS;Initial Catalog=MenaxhimiRestorantit;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-      providerName="System.Data.SqlClient"
+		<add
+   name="connStrRrezon"
+   connectionString="Data Source=DESKTOP-HP5K2C6\SQLEXPRESS;Initial Catalog=MenaxhimiRestorantit;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+   providerName="System.Data.SqlClient"
          />
-  </connectionStrings>
+		<add
+		name="connStrDibran"
+		connectionString="Data Source=D3V3NT;Initial Catalog=MenaxhimiRestaurantit;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+		providerName="System.Data.SqlClient"
+         />
+	</connectionStrings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
 	</startup>
